test/corpus/attributes.txt
=================================+++
An example from the documentation
=================================+++

=========================
Test that will be skipped
:skip
=========================

int main() {}

-------------------------

====================================
Test that will run on Linux or macOS

:platform(linux)
:platform(macos)
====================================

int main() {}

------------------------------------

========================================================================
Test that expects an error, and will fail fast if there's no parse error
:fail-fast
:error
========================================================================

int main ( {}

------------------------------------------------------------------------

=================================================
Test that will parse with both Typescript and TSX
:language(typescript)
:language(tsx)
=================================================

console.log('Hello, world!');

-------------------------------------------------

---------------------------------+++

(source_file
  (test_block
    (header
      (header_delimiter)
      (header_text)
      (attribute)
      (header_delimiter))
    (code)
    (delimiter)
    (syntax_tree))
  (test_block
    (header
      (header_delimiter)
      (header_text)
      (attribute)
      (attribute)
      (header_delimiter))
    (code)
    (delimiter)
    (syntax_tree))
  (test_block
    (header
      (header_delimiter)
      (header_text)
      (attribute)
      (attribute)
      (header_delimiter))
    (code)
    (delimiter)
    (syntax_tree))
  (test_block
    (header
      (header_delimiter)
      (header_text)
      (attribute)
      (attribute)
      (header_delimiter))
    (code)
    (delimiter)
    (syntax_tree)))
